--- a/bonferroni.ipynb
+++ b/bonferroni.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.12 2.84 3.84 1.2 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# average ranking\n",
+    "\n",
+    "import numpy as np\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "DataWig = [0.5641,\n",
+    "0.3699,\n",
+    "0.2146,\n",
+    "0.2786,\n",
+    "0.261,\n",
+    "0.5095,\n",
+    "0.4574,\n",
+    "0.5403,\n",
+    "0.2783,\n",
+    "0.1475,\n",
+    "0.1748,\n",
+    "0.2621,\n",
+    "0.2543,\n",
+    "0.2884,\n",
+    "0.2698,\n",
+    "0.1641,\n",
+    "0.1724,\n",
+    "0.3368,\n",
+    "0.4654,\n",
+    "0.1613,\n",
+    "0.2222,\n",
+    "0.3853,\n",
+    "0.3885,\n",
+    "0.2227,\n",
+    "0.2602\n",
+    "]\n",
+    "\n",
+    "Knn = [0.7109,\n",
+    "0.4442,\n",
+    "0.2582,\n",
+    "0.2589,\n",
+    "0.3243,\n",
+    "0.5531,\n",
+    "0.4302,\n",
+    "0.7072,\n",
+    "0.3055,\n",
+    "0.1693,\n",
+    "0.1883,\n",
+    "0.3186,\n",
+    "0.2397,\n",
+    "0.3589,\n",
+    "0.2819,\n",
+    "0.1637,\n",
+    "0.2448,\n",
+    "0.3905,\n",
+    "0.4182,\n",
+    "0.1726,\n",
+    "0.3045,\n",
+    "0.403,\n",
+    "0.5307,\n",
+    "0.267,\n",
+    "0.3151\n",
+    "]\n",
+    "SE = [0.6371,\n",
+    "0.7026,\n",
+    "0.5803,\n",
+    "0.683,\n",
+    "0.246,\n",
+    "0.6562,\n",
+    "0.7228,\n",
+    "0.6469,\n",
+    "0.4986,\n",
+    "0.6622,\n",
+    "0.7074,\n",
+    "0.3842,\n",
+    "0.6346,\n",
+    "0.6943,\n",
+    "0.4786,\n",
+    "0.6207,\n",
+    "0.3185,\n",
+    "0.7025,\n",
+    "0.9933,\n",
+    "1.2148,\n",
+    "1.2584,\n",
+    "0.5213,\n",
+    "0.6863,\n",
+    "0.5643,\n",
+    "1.2588\n",
+    "]\n",
+    "proposed = [0.3811,\n",
+    "0.3151,\n",
+    "0.1903,\n",
+    "0.2408,\n",
+    "0.1597,\n",
+    "0.1761,\n",
+    "0.4939,\n",
+    "0.3347,\n",
+    "0.1875,\n",
+    "0.1314,\n",
+    "0.1761,\n",
+    "0.2517,\n",
+    "0.3046,\n",
+    "0.2778,\n",
+    "0.2337,\n",
+    "0.1193,\n",
+    "0.1658,\n",
+    "0.272,\n",
+    "0.3675,\n",
+    "0.0707,\n",
+    "0.1895,\n",
+    "0.2852,\n",
+    "0.3819,\n",
+    "0.157,\n",
+    "0.2186\n",
+    "]\n",
+    "chain2 = [0.3942,\n",
+    "0.3193,\n",
+    "0.1916,\n",
+    "0.2463,\n",
+    "0.1644,\n",
+    "0.172,\n",
+    "0.4825,\n",
+    "0.3198,\n",
+    "0.1798,\n",
+    "0.132,\n",
+    "0.1768,\n",
+    "0.226,\n",
+    "0.3046,\n",
+    "0.278,\n",
+    "0.2364,\n",
+    "0.1196,\n",
+    "0.1653,\n",
+    "0.2776,\n",
+    "0.3875,\n",
+    "0.075,\n",
+    "0.1872,\n",
+    "0.2948,\n",
+    "0.385,\n",
+    "0.1613,\n",
+    "0.2182\n",
+    "]\n",
+    "\n",
+    "\n",
+    "up_chain3 = [0.3887,\n",
+    "0.3242,\n",
+    "0.1906,\n",
+    "0.2345,\n",
+    "0.1899,\n",
+    "0.1477,\n",
+    "0.4902,\n",
+    "0.3142,\n",
+    "0.1801,\n",
+    "0.1319,\n",
+    "0.1759,\n",
+    "0.219,\n",
+    "0.3005,\n",
+    "0.2807,\n",
+    "0.2372,\n",
+    "0.1276,\n",
+    "0.1652,\n",
+    "0.28,\n",
+    "0.4117,\n",
+    "0.0738,\n",
+    "0.1891,\n",
+    "0.2776,\n",
+    "0.3877,\n",
+    "0.1569,\n",
+    "0.2421\n",
+    "]\n",
+    "# 데이터셋 개수\n",
+    "N = 25\n",
+    "\n",
+    "# 각 method의 순위 계산 (수정된 부분)\n",
+    "# 이 부분은 accuracy 할 때 순위 계산되는 부분\n",
+    "# ranks = np.argsort(np.argsort(-np.vstack((DataWig, Knn, SE, proposed)), axis=0), axis=0) + 1\n",
+    "\n",
+    "# 이 부분은 rmse 할 때 순위 계산되는 부분\n",
+    "# ranks = np.argsort(np.argsort(np.vstack((DataWig, Knn, SE, proposed)), axis=0), axis=0) + 1\n",
+    "ranks = np.argsort(np.argsort(np.vstack((proposed, chain2)), axis=0), axis=0) + 1\n",
+    "\n",
+    "# 각 method의 평균 순위 계산\n",
+    "average_ranks = np.mean(ranks, axis=1)\n",
+    "print(average_ranks)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -211,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
